tests/ui/lint/snapshots/float_cmp_distinct_aliases.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Exact float comparison
   ╭─[test.lis:7:11]
 6 │   let b: B = 2.0
 7 │   let _ = a == b
   ·           ───┬──
   ·              ╰── floats compared with `==`
 8 │ }
   ╰────
  help: Floating-point results are rarely bit-exact, so `==` and `!=` may not behave as intended. Compare within a tolerance instead, e.g. `math.Abs(a - b) < c` · code: [lint.float_cmp]
