tests/ui/lint/snapshots/float_cmp_equal.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Exact float comparison
   ╭─[test.lis:5:11]
 4 │   let g: float64 = 2.0
 5 │   let _ = f == g
   ·           ───┬──
   ·              ╰── floats compared with `==`
 6 │ }
   ╰────
  help: Floating-point results are rarely bit-exact, so `==` and `!=` may not behave as intended. Compare within a tolerance instead, e.g. `math.Abs(a - b) < c` · code: [lint.float_cmp]
