tests/ui/lint/snapshots/float_cmp_literal.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Exact float comparison
   ╭─[test.lis:4:11]
 3 │   let f: float64 = 1.0
 4 │   let _ = f == 1.5
   ·           ────┬───
   ·               ╰── floats compared with `==`
 5 │ }
   ╰────
  help: Floating-point results are rarely bit-exact, so `==` and `!=` may not behave as intended. Compare within a tolerance instead, e.g. `math.Abs(a - b) < c` · code: [lint.float_cmp]
