tests/ui/lint/snapshots/float_equality_without_abs_alias.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Float equality without `abs`
   ╭─[test.lis:6:11]
 5 │   let b: Score = 2.0
 6 │   let _ = (a - b) < 0.001
   ·           ───────┬───────
   ·                  ╰── difference is not wrapped in `math.Abs`
 7 │ }
   ╰────
  help: Because `a - b` is signed, this is also `true` whenever `a` is far below `b`, not only when `a` and `b` are close, so it wrongly accepts values that are nowhere near equal. Compare the magnitude instead: `math.Abs(a - b) < c` · code: [lint.float_equality_without_abs]
